# class_scanner

./: .gitignore  ExtractPbo.md  README.md  api.py  cache.py  class_scanner.code-workspace  parser.py  pbo.py  pbo_extractor.py  pyproject.toml  pytest.ini  scanner.py
scripts/: ref.py  scan_test.py  scanning.py  utils.py
scripts/reporting/: __init__.py  addon_analysis.py  dependency_analysis.py  inheritance_analysis.py  report_generator.py  tree_visualization.py
src/: config.py  models.py  parser.py  pbo.py  pbo_extractor.py  scanner.py
src/class_scanner/: __init__.py  api.py  cache.py  constants.py  models.py  pbo_extractor.py  scanner.py
src/class_scanner/core/: parser.py  validator.py
src/class_scanner/models/: __init__.py  base.py  config.py  core.py  results.py
src/class_scanner/parser/: __init__.py  class_parser.py  code_parser.py  property_parser.py  (+3 more)
src/models/: __init__.py  config.py  core.py
src/parser/: class_parser.py  code_parser.py  property_parser.py  property_tokenizer.py  property_types.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_class_categories.py  test_class_config_enhanced_movement.py  test_class_config_hidden_vest.py  test_class_config_mirrorform.py  test_class_config_rhs_headband.py  test_data.py  test_live_scan.py  test_property_parser.py  test_sample_data_scan.py  test_scanner_integration.py
tools/: scan_report.py
tools/reports/: __init__.py  class_list_report.py  hierarchy_report.py  inheritance_utils.py  json_encoder.py  node_edge_report.py  structure_report.py  targeted_inheritance_report.py  types.py
(+2 files in other folders)
