[project]
name = "class_scanner"
version = "0.1.0"
description = "Class scanner for game mods"
authors = [{name = "Tom Campbell",email = "tyen901@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov",
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2"
]
